--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -11,10 +11,10 @@
 
   <!-- 店铺信息 -->
   <view class="shop-info">
-    <view class="shop-name">美味餐厅</view>
+    <view class="shop-name">蓓蓓的餐厅</view>
     <view class="shop-desc">用心做好每一道菜</view>
     <view class="shop-time">营业时间：10:00 - 22:00</view>
-    <view class="shop-address">📍 北京市朝阳区美食街88号</view>
+    <view class="shop-address">📍 广东省深圳市福永街道聚福园</view>
     <view class="shop-phone">📞 400-888-8888</view>
   </view>
 
